# ros2_self_driving_robot

./: README.md  frames_2024-05-23_11.47.51.gv
install/: local_setup.sh  setup.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
install/my_nav2_behavior_tree/include/my_nav2_behavior_tree/: obstacle_warning_action.hpp
install/my_nav2_behavior_tree/share/my_nav2_behavior_tree/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_nav2_behavior_tree/share/my_nav2_behavior_tree/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml
install/my_nav2_behavior_tree/share/my_nav2_behavior_tree/cmake/: ament_cmake_export_dependencies-extras.cmake  my_nav2_behavior_treeConfig.cmake
install/my_package/share/my_package/: package.sh  package.xml
install/nav2_behavior_plugin/include/nav2_behavior_plugin/: obstacle_warning.hpp
install/nav2_behavior_plugin/share/nav2_behavior_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_behavior_plugin/share/nav2_behavior_plugin/action/: ObstacleWarning.action
install/nav2_behavior_plugin/share/nav2_behavior_plugin/cmake/: ament_cmake_export_dependencies-extras.cmake  export_nav2_behavior_plugin__rosidl_generator_cExport-noconfig.cmake  export_nav2_behavior_plugin__rosidl_generator_pyExport.cmake  export_nav2_behavior_plugin__rosidl_typesupport_fastrtps_cExport.cmake  nav2_behavior_pluginConfig.cmake  nav2_behavior_plugin__rosidl_typesupport_cExport-noconfig.cmake  nav2_behavior_plugin__rosidl_typesupport_cppExport-noconfig.cmake  nav2_behavior_plugin__rosidl_typesupport_introspection_cExport-noconfig.cmake  nav2_behavior_plugin__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/python_pkg/share/python_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_bringup/share/robot_bringup/: package.sh  package.xml
install/robot_bringup/share/robot_bringup/config/: ekf.yaml  usbcam.yaml
install/robot_bringup/share/robot_bringup/launch/: bringup.launch.py
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_description/share/robot_description/launch/: display.launch.py
install/robot_description/share/robot_description/rviz/: bringup.rviz  display.rviz
install/robot_description/share/robot_description/urdf/: bb_bot.urdf.xacro
install/robot_navigation/share/robot_navigation/: local_setup.sh  package.sh
install/robot_navigation/share/robot_navigation/launch/: collision_monitor_node.launch.py  nav.launch.py  navigation.launch.py  navigation_launch.py
install/robot_navigation/share/robot_navigation/maps/: 4_map_save.pgm  4_map_save.yaml  first_map_save.pgm  test_save.pgm
install/robot_navigation/share/robot_navigation/rviz/: navigation.rviz
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sllidar_ros2/share/sllidar_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  sllidar_ros2Config-version.cmake  sllidar_ros2Config.cmake
install/sllidar_ros2/share/sllidar_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/sllidar_ros2/share/sllidar_ros2/launch/: sllidar_a2m8_launch.py  sllidar_s1_tcp_launch.py  sllidar_s2_launch.py  sllidar_t1_launch.py  view_sllidar_a2m8_launch.py  view_sllidar_a3_launch.py  view_sllidar_s1_launch.py  view_sllidar_s2_launch.py  view_sllidar_s2e_launch.py
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
src/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
src/install/robot_navigation/share/robot_navigation/: package.sh  package.xml
src/install/robot_navigation/share/robot_navigation/config/: navigation.yaml
src/install/robot_navigation/share/robot_navigation/maps/: 2_map_serial.data
src/log/: latest_build  latest_list
src/micro_ros_rpi2040/: platformio.ini
src/micro_ros_rpi2040/src/: main.cpp
src/my_nav2_behavior_tree/: CMakeLists.txt  package.xml
src/my_nav2_behavior_tree/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
src/my_nav2_behavior_tree/src/: obstacle_warning_action.cpp
src/nav2_behavior_plugin/: CMakeLists.txt  behavior_plugin.xml
src/nav2_behavior_plugin/src/: obstacle_warning.cpp
src/python_pkg/: package.xml  setup.cfg  setup.py
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/config/: ekf.yaml
src/robot_bringup/launch/: bringup.launch.py  camera.launch.py  micro_ros.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robot_description/launch/: display.launch.py
src/robot_description/log/: latest_build
src/robot_description/rviz/: display.rviz
src/robot_description/urdf/: bb_bot.urdf.xacro
src/robot_navigation/: CMakeLists.txt
src/robot_navigation/config/: .navigation.yaml.swp  collision_monitor_params.yaml  navigation.yaml
src/robot_navigation/launch/: navigation.launch.py  slam.launch.py
src/robot_navigation/maps/: 2_map_save.pgm  2_map_save.yaml  3_map_serial.data  first_map_save.yaml  lobby_save.pgm  lobby_save.yaml  test_save.yaml
src/robot_navigation/rviz/: navigation.rviz  slam.rviz
(+76 files in other folders)
